qt6/printsupport/gen_qprinter.nim

import Qt6PrintSupport_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6PrintSupport")
{.compile("gen_qprinter.cpp", cflags).}


type QPrinterPrinterMode* = cint
const
  QPrinterScreenResolution* = 0
  QPrinterPrinterResolution* = 1
  QPrinterHighResolution* = 2



type QPrinterPageOrder* = cint
const
  QPrinterFirstPageFirst* = 0
  QPrinterLastPageFirst* = 1



type QPrinterColorMode* = cint
const
  QPrinterGrayScale* = 0
  QPrinterColor* = 1



type QPrinterPaperSource* = cint
const
  QPrinterOnlyOne* = 0
  QPrinterLower* = 1
  QPrinterMiddle* = 2
  QPrinterManual* = 3
  QPrinterEnvelope* = 4
  QPrinterEnvelopeManual* = 5
  QPrinterAuto* = 6
  QPrinterTractor* = 7
  QPrinterSmallFormat* = 8
  QPrinterLargeFormat* = 9
  QPrinterLargeCapacity* = 10
  QPrinterCassette* = 11
  QPrinterFormSource* = 12
  QPrinterMaxPageSource* = 13
  QPrinterCustomSource* = 14
  QPrinterLastPaperSource* = 14
  QPrinterUpper* = 0



type QPrinterPrinterState* = cint
const
  QPrinterIdle* = 0
  QPrinterActive* = 1
  QPrinterAborted* = 2
  QPrinterError* = 3



type QPrinterOutputFormat* = cint
const
  QPrinterNativeFormat* = 0
  QPrinterPdfFormat* = 1



type QPrinterPrintRange* = cint
const
  QPrinterAllPages* = 0
  QPrinterSelection* = 1
  QPrinterPageRange* = 2
  QPrinterCurrentPage* = 3



type QPrinterUnit* = cint
const
  QPrinterMillimeter* = 0
  QPrinterPoint* = 1
  QPrinterInch* = 2
  QPrinterPica* = 3
  QPrinterDidot* = 4
  QPrinterCicero* = 5
  QPrinterDevicePixel* = 6



type QPrinterDuplexMode* = cint
const
  QPrinterDuplexNone* = 0
  QPrinterDuplexAuto* = 1
  QPrinterDuplexLongSide* = 2
  QPrinterDuplexShortSide* = 3



import gen_qprinter_types
export gen_qprinter_types

import
  gen_qmargins,
  gen_qpagedpaintdevice,
  gen_qpagelayout,
  gen_qpageranges,
  gen_qpagesize,
  gen_qpaintdevice,
  gen_qpaintengine,
  gen_qpainter,
  gen_qpoint,
  gen_qprintengine,
  gen_qprinterinfo,
  gen_qrect
export
  gen_qmargins,
  gen_qpagedpaintdevice,
  gen_qpagelayout,
  gen_qpageranges,
  gen_qpagesize,
  gen_qpaintdevice,
  gen_qpaintengine,
  gen_qpainter,
  gen_qpoint,
  gen_qprintengine,
  gen_qprinterinfo,
  gen_qrect

type cQPrinter*{.exportc: "QPrinter", incompleteStruct.} = object

proc fcQPrinter_new(): ptr cQPrinter {.importc: "QPrinter_new".}
proc fcQPrinter_new2(printer: pointer): ptr cQPrinter {.importc: "QPrinter_new2".}
proc fcQPrinter_new3(mode: cint): ptr cQPrinter {.importc: "QPrinter_new3".}
proc fcQPrinter_new4(printer: pointer, mode: cint): ptr cQPrinter {.importc: "QPrinter_new4".}
proc fcQPrinter_devType(self: pointer, ): cint {.importc: "QPrinter_devType".}
proc fcQPrinter_setOutputFormat(self: pointer, format: cint): void {.importc: "QPrinter_setOutputFormat".}
proc fcQPrinter_outputFormat(self: pointer, ): cint {.importc: "QPrinter_outputFormat".}
proc fcQPrinter_setPdfVersion(self: pointer, version: cint): void {.importc: "QPrinter_setPdfVersion".}
proc fcQPrinter_pdfVersion(self: pointer, ): cint {.importc: "QPrinter_pdfVersion".}
proc fcQPrinter_setPrinterName(self: pointer, printerName: struct_miqt_string): void {.importc: "QPrinter_setPrinterName".}
proc fcQPrinter_printerName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_printerName".}
proc fcQPrinter_isValid(self: pointer, ): bool {.importc: "QPrinter_isValid".}
proc fcQPrinter_setOutputFileName(self: pointer, outputFileName: struct_miqt_string): void {.importc: "QPrinter_setOutputFileName".}
proc fcQPrinter_outputFileName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_outputFileName".}
proc fcQPrinter_setPrintProgram(self: pointer, printProgram: struct_miqt_string): void {.importc: "QPrinter_setPrintProgram".}
proc fcQPrinter_printProgram(self: pointer, ): struct_miqt_string {.importc: "QPrinter_printProgram".}
proc fcQPrinter_setDocName(self: pointer, docName: struct_miqt_string): void {.importc: "QPrinter_setDocName".}
proc fcQPrinter_docName(self: pointer, ): struct_miqt_string {.importc: "QPrinter_docName".}
proc fcQPrinter_setCreator(self: pointer, creator: struct_miqt_string): void {.importc: "QPrinter_setCreator".}
proc fcQPrinter_creator(self: pointer, ): struct_miqt_string {.importc: "QPrinter_creator".}
proc fcQPrinter_setPageOrder(self: pointer, pageOrder: cint): void {.importc: "QPrinter_setPageOrder".}
proc fcQPrinter_pageOrder(self: pointer, ): cint {.importc: "QPrinter_pageOrder".}
proc fcQPrinter_setResolution(self: pointer, resolution: cint): void {.importc: "QPrinter_setResolution".}
proc fcQPrinter_resolution(self: pointer, ): cint {.importc: "QPrinter_resolution".}
proc fcQPrinter_setColorMode(self: pointer, colorMode: cint): void {.importc: "QPrinter_setColorMode".}
proc fcQPrinter_colorMode(self: pointer, ): cint {.importc: "QPrinter_colorMode".}
proc fcQPrinter_setCollateCopies(self: pointer, collate: bool): void {.importc: "QPrinter_setCollateCopies".}
proc fcQPrinter_collateCopies(self: pointer, ): bool {.importc: "QPrinter_collateCopies".}
proc fcQPrinter_setFullPage(self: pointer, fullPage: bool): void {.importc: "QPrinter_setFullPage".}
proc fcQPrinter_fullPage(self: pointer, ): bool {.importc: "QPrinter_fullPage".}
proc fcQPrinter_setCopyCount(self: pointer, copyCount: cint): void {.importc: "QPrinter_setCopyCount".}
proc fcQPrinter_copyCount(self: pointer, ): cint {.importc: "QPrinter_copyCount".}
proc fcQPrinter_supportsMultipleCopies(self: pointer, ): bool {.importc: "QPrinter_supportsMultipleCopies".}
proc fcQPrinter_setPaperSource(self: pointer, paperSource: cint): void {.importc: "QPrinter_setPaperSource".}
proc fcQPrinter_paperSource(self: pointer, ): cint {.importc: "QPrinter_paperSource".}
proc fcQPrinter_setDuplex(self: pointer, duplex: cint): void {.importc: "QPrinter_setDuplex".}
proc fcQPrinter_duplex(self: pointer, ): cint {.importc: "QPrinter_duplex".}
proc fcQPrinter_supportedResolutions(self: pointer, ): struct_miqt_array {.importc: "QPrinter_supportedResolutions".}
proc fcQPrinter_setFontEmbeddingEnabled(self: pointer, enable: bool): void {.importc: "QPrinter_setFontEmbeddingEnabled".}
proc fcQPrinter_fontEmbeddingEnabled(self: pointer, ): bool {.importc: "QPrinter_fontEmbeddingEnabled".}
proc fcQPrinter_paperRect(self: pointer, param1: cint): pointer {.importc: "QPrinter_paperRect".}
proc fcQPrinter_pageRect(self: pointer, param1: cint): pointer {.importc: "QPrinter_pageRect".}
proc fcQPrinter_printerSelectionOption(self: pointer, ): struct_miqt_string {.importc: "QPrinter_printerSelectionOption".}
proc fcQPrinter_setPrinterSelectionOption(self: pointer, printerSelectionOption: struct_miqt_string): void {.importc: "QPrinter_setPrinterSelectionOption".}
proc fcQPrinter_newPage(self: pointer, ): bool {.importc: "QPrinter_newPage".}
proc fcQPrinter_abort(self: pointer, ): bool {.importc: "QPrinter_abort".}
proc fcQPrinter_printerState(self: pointer, ): cint {.importc: "QPrinter_printerState".}
proc fcQPrinter_paintEngine(self: pointer, ): pointer {.importc: "QPrinter_paintEngine".}
proc fcQPrinter_printEngine(self: pointer, ): pointer {.importc: "QPrinter_printEngine".}
proc fcQPrinter_setFromTo(self: pointer, fromPage: cint, toPage: cint): void {.importc: "QPrinter_setFromTo".}
proc fcQPrinter_fromPage(self: pointer, ): cint {.importc: "QPrinter_fromPage".}
proc fcQPrinter_toPage(self: pointer, ): cint {.importc: "QPrinter_toPage".}
proc fcQPrinter_setPrintRange(self: pointer, range: cint): void {.importc: "QPrinter_setPrintRange".}
proc fcQPrinter_printRange(self: pointer, ): cint {.importc: "QPrinter_printRange".}
proc fQPrinter_virtualbase_devType(self: pointer, ): cint{.importc: "QPrinter_virtualbase_devType".}
proc fcQPrinter_override_virtual_devType(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_devType".}
proc fQPrinter_virtualbase_newPage(self: pointer, ): bool{.importc: "QPrinter_virtualbase_newPage".}
proc fcQPrinter_override_virtual_newPage(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_newPage".}
proc fQPrinter_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QPrinter_virtualbase_paintEngine".}
proc fcQPrinter_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_paintEngine".}
proc fQPrinter_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QPrinter_virtualbase_metric".}
proc fcQPrinter_override_virtual_metric(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_metric".}
proc fQPrinter_virtualbase_setPageLayout(self: pointer, pageLayout: pointer): bool{.importc: "QPrinter_virtualbase_setPageLayout".}
proc fcQPrinter_override_virtual_setPageLayout(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageLayout".}
proc fQPrinter_virtualbase_setPageSize(self: pointer, pageSize: pointer): bool{.importc: "QPrinter_virtualbase_setPageSize".}
proc fcQPrinter_override_virtual_setPageSize(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageSize".}
proc fQPrinter_virtualbase_setPageOrientation(self: pointer, orientation: cint): bool{.importc: "QPrinter_virtualbase_setPageOrientation".}
proc fcQPrinter_override_virtual_setPageOrientation(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageOrientation".}
proc fQPrinter_virtualbase_setPageMargins(self: pointer, margins: pointer, units: cint): bool{.importc: "QPrinter_virtualbase_setPageMargins".}
proc fcQPrinter_override_virtual_setPageMargins(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageMargins".}
proc fQPrinter_virtualbase_setPageRanges(self: pointer, ranges: pointer): void{.importc: "QPrinter_virtualbase_setPageRanges".}
proc fcQPrinter_override_virtual_setPageRanges(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_setPageRanges".}
proc fQPrinter_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QPrinter_virtualbase_initPainter".}
proc fcQPrinter_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_initPainter".}
proc fQPrinter_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QPrinter_virtualbase_redirected".}
proc fcQPrinter_override_virtual_redirected(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_redirected".}
proc fQPrinter_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QPrinter_virtualbase_sharedPainter".}
proc fcQPrinter_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QPrinter_override_virtual_sharedPainter".}
proc fcQPrinter_delete(self: pointer) {.importc: "QPrinter_delete".}


func init*(T: type QPrinter, h: ptr cQPrinter): QPrinter =
  T(h: h)
proc create*(T: type QPrinter, ): QPrinter =

  QPrinter.init(fcQPrinter_new())
proc create*(T: type QPrinter, printer: gen_qprinterinfo.QPrinterInfo): QPrinter =

  QPrinter.init(fcQPrinter_new2(printer.h))
proc create*(T: type QPrinter, mode: QPrinterPrinterMode): QPrinter =

  QPrinter.init(fcQPrinter_new3(cint(mode)))
proc create*(T: type QPrinter, printer: gen_qprinterinfo.QPrinterInfo, mode: QPrinterPrinterMode): QPrinter =

  QPrinter.init(fcQPrinter_new4(printer.h, cint(mode)))
proc devType*(self: QPrinter, ): cint =

  fcQPrinter_devType(self.h)

proc setOutputFormat*(self: QPrinter, format: QPrinterOutputFormat): void =

  fcQPrinter_setOutputFormat(self.h, cint(format))
